# strand_integration

./: .gitignore  README.md  run_consistency_map.py  run_line_filtering.py  run_lpmvs.py  run_strand_integration.py  visualize_ply.py
cpp_ext/: CMakeLists.txt  README.md  pyproject.toml
cpp_ext/src/: cv_typecaster.h  strandtools.cpp
cpp_ext/src/include/: camera.h  cerealisation.h  costfunctions.h  dataframe.h  geometry.h  line.h  orientation.h  pbrt.h  propagate.h  random.h  ray.h  refinement.h  sampler.h  utils.h
cpp_ext/src/strandtools/: __init__.py
data/: README.md
data/straight_s/00/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/01/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/02/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/03/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/04/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/05/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/06/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/07/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/08/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/09/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/10/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/11/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/12/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/13/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/14/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/15/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/16/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/17/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/18/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/19/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/20/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/21/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/22/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/23/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/24/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/25/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/26/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/27/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/28/: K.txt  R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/29/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/30/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/31/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/32/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/33/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/34/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/35/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/36/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/37/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/38/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/39/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/40/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/41/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/42/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/43/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/44/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
data/straight_s/45/: R.txt  confidence.exr  intensity.exr  orientation2d.exr  t.txt
utils/: __init__.py  colormap.py  configs.py  exr.py  normal.py  o3d_utils.py  parallel_imread.py  ply.py  torch_utils.py  view.py
(+70 files in other folders)
