[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.5.2"]
build-backend = "scikit_build_core.build"

[project]
name = "strandtools"
version = "0.0.1"
description = "An extension module to accelerate 3D reconstruction of hair strands."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ryota Maeda", email = "maeda.ryota.elerac@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/elerac/strand_integration"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"